Additive Manufacturing : name changed to kiran joshi

--- a/AdditiveManufacturing/public_html/index.html
+++ b/AdditiveManufacturing/public_html/index.html
@@ -44,7 +44,7 @@
                                 </form>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> Sandeep Gawde <span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> Kiran Joshi <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">Settings</a></li>
                                     <li class="divider"></li>
